; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_18040.c_timeout_handler.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_18040.c_timeout_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [23 x i8] c"[-] read() timeout!  \0A\00", align 1
@.str.1 = private unnamed_addr constant [85 x i8] c"Try with console ownership: switch to a TTY by using Ctrl-Alt-F[1-6] and try again.\0A\00", align 1
@.str.2 = private unnamed_addr constant [30 x i8] c"Maybe inotify isn't enabled.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @timeout_handler() #0 {
  %1 = call i32 @printf(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  %2 = call i32 (...) @get_tty_number()
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %6, label %4

4:                                                ; preds = %0
  %5 = call i32 @printf(i8* getelementptr inbounds ([85 x i8], [85 x i8]* @.str.1, i64 0, i64 0))
  br label %8

6:                                                ; preds = %0
  %7 = call i32 @printf(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.2, i64 0, i64 0))
  br label %8

8:                                                ; preds = %6, %4
  %9 = call i32 @_exit(i32 1) #3
  unreachable
}

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @get_tty_number(...) #1

; Function Attrs: noreturn
declare dso_local i32 @_exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
